--- a/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
+++ b/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -152,7 +152,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="D3D11BufferHandler.h" />
-    <ClInclude Include="SGError.h" />
+    <ClInclude Include="D3D11TextureHandler.h" />
+    <ClInclude Include="SGResult.h" />
     <ClInclude Include="SGGraphicalEntity.h" />
     <ClInclude Include="SGGuid.h" />
     <ClInclude Include="D3D11RenderEngine.h" />
