Slight rework of design

--- a/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
+++ b/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
@@ -152,6 +152,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="D3D11BufferHandler.h" />
+    <ClInclude Include="D3D11CommonTypes.h" />
+    <ClInclude Include="D3D11SamplerHandler.h" />
     <ClInclude Include="D3D11TextureHandler.h" />
     <ClInclude Include="SGResult.h" />
     <ClInclude Include="SGGraphicalEntity.h" />
