--- a/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj.filters
+++ b/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="SGGraphicsPipeline.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SGError.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SGGuid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -34,6 +31,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SGRenderEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="D3D11TextureHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SGResult.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="D3D11CommonTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="D3D11SamplerHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
