--- a/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj.filters
+++ b/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="SGGraphicsPipelineHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="D3D11StateHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SGGuid.cpp">
