Hopefully finished design structure

--- a/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
+++ b/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
@@ -153,10 +153,12 @@
   <ItemGroup>
     <ClInclude Include="D3D11BufferHandler.h" />
     <ClInclude Include="D3D11CommonTypes.h" />
+    <ClInclude Include="D3D11DrawDataHandler.h" />
     <ClInclude Include="D3D11StateHandler.h" />
     <ClInclude Include="D3D11SamplerHandler.h" />
-    <ClInclude Include="D3D11ShaderHandler.h" />
+    <ClInclude Include="D3D11ShaderManager.h" />
     <ClInclude Include="D3D11TextureHandler.h" />
+    <ClInclude Include="SGGraphicsHandler.h" />
     <ClInclude Include="SGResult.h" />
     <ClInclude Include="SGGraphicalEntity.h" />
     <ClInclude Include="SGGuid.h" />
