--- a/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj.filters
+++ b/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj.filters
@@ -22,9 +22,6 @@
     <ClInclude Include="D3D11CommonTypes.h">
       <Filter>D3D11</Filter>
     </ClInclude>
-    <ClInclude Include="D3D11DrawDataHandler.h">
-      <Filter>D3D11</Filter>
-    </ClInclude>
     <ClInclude Include="D3D11PipelineManager.h">
       <Filter>D3D11</Filter>
     </ClInclude>
@@ -64,6 +61,9 @@
     <ClInclude Include="SGThreadPool.h">
       <Filter>Other</Filter>
     </ClInclude>
+    <ClInclude Include="TripleBufferedData.h">
+      <Filter>Other</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D3D11PipelineManager.cpp">
@@ -87,6 +87,11 @@
     <ClCompile Include="D3D11BufferHandler.cpp">
       <Filter>D3D11</Filter>
     </ClCompile>
-    <ClCompile Include="D3D11CommonTypes.cpp" />
+    <ClCompile Include="D3D11CommonTypes.cpp">
+      <Filter>D3D11</Filter>
+    </ClCompile>
+    <ClCompile Include="D3D11ShaderManager.cpp">
+      <Filter>D3D11</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
