--- a/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
+++ b/SteelgearGraphics/SteelgearGraphics/SteelgearGraphics.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="D3D11BufferHandler.h" />
     <ClInclude Include="D3D11CommonTypes.h" />
+    <ClInclude Include="D3D11DrawCallHandler.h" />
     <ClInclude Include="D3D11StateHandler.h" />
     <ClInclude Include="D3D11SamplerHandler.h" />
     <ClInclude Include="D3D11ShaderManager.h" />
@@ -183,9 +184,11 @@
   <ItemGroup>
     <ClCompile Include="D3D11BufferHandler.cpp" />
     <ClCompile Include="D3D11CommonTypes.cpp" />
+    <ClCompile Include="D3D11DrawCallHandler.cpp" />
     <ClCompile Include="D3D11PipelineManager.cpp" />
     <ClCompile Include="D3D11RenderEngine.cpp" />
     <ClCompile Include="D3D11ShaderManager.cpp" />
+    <ClCompile Include="D3D11StateHandler.cpp" />
     <ClCompile Include="D3D11TextureHandler.cpp" />
     <ClCompile Include="SGGraphicsHandler.cpp" />
     <ClCompile Include="SGGuid.cpp" />
